src/plugins/clangcodemodel/test/clangcodecompletion_test.h
@@ -57,6 +57,9 @@ private slots:
     void testCompleteProjectDependingCode();
     void testCompleteProjectDependingCodeAfterChangingProject();
     void testCompleteProjectDependingCodeInGeneratedUiFile();
+
+    void testSignalCompletion_data();
+    void testSignalCompletion();
 };
 
 } // namespace Tests
